tests/baselines/reference/es6ImportNamedImportWithExport.errors.txt
tests/cases/compiler/client.ts(1,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(2,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(3,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(4,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(5,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(6,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(7,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(8,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(9,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(10,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(11,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(12,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(13,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(14,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(15,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(16,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(17,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(18,12): error TS2323: Cannot redeclare exported variable 'xxxx'.
tests/cases/compiler/client.ts(19,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(21,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(25,1): error TS1191: An import declaration cannot have modifiers.
tests/cases/compiler/client.ts(26,1): error TS1191: An import declaration cannot have modifiers.


==== tests/cases/compiler/server.ts (0 errors) ====
    export var a = 10;
    export var x = a;
    export var m = a;
    export var a1 = 10;
    export var x1 = 10;
    export var z1 = 10;
    export var z2 = 10;
    export var aaaa = 10;
    
==== tests/cases/compiler/client.ts (22 errors) ====
    export import { } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export import { a } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = a;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { a as b } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = b;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { x, a as y } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = x;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export var xxxx = y;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { x as z,  } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = z;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { m,  } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = m;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { a1, x1 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = a1;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export var xxxx = x1;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { a1 as a11, x1 as x11 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var xxxx = a11;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export var xxxx = x11;
               ~~~~
!!! error TS2323: Cannot redeclare exported variable 'xxxx'.
    export import { z1 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var z111 = z1;
    export import { z2 as z3 } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export var z2 = z3; // z2 shouldn't give redeclare error
    
    // Non referenced imports
    export import { aaaa } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    export import { aaaa as bbbb } from "./server";
    ~~~~~~
!!! error TS1191: An import declaration cannot have modifiers.
    